# dejavu-similarity-api

./: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml  run.sh
.github/workflows/: build-deploy-main.yml
scripts/: deploy.sh
src/: lib.rs  main.rs
src/application/service/: mod.rs  semantic_detector.rs  similarity_result.rs  similarity_service.rs  transcription_service.rs
src/application/usecases/: health.rs  mod.rs  similarity.rs
src/core/: mod.rs
src/core/scripts/: download_model.py  semantic_similarity_detector.py  semantic_similarity_service.py  similarity_service.py  whisperx_service.py
src/domain/dtos/: health.rs  mod.rs  similarity.rs
src/domain/models/: mod.rs  similarity.rs
src/presentation/: routes.rs
src/presentation/controllers/api/: health.rs  mod.rs  transcription.rs
src/presentation/controllers/websocket/: mod.rs  similarity.rs  transcription.rs
src/utils/: errors.rs  mod.rs  noise_removal.rs
